--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 body {
-  font: Arial, Helvetica, sans-serif;
-  background-color: black;
-  color: white;
+  font: 16px "Helvetica Neue", Arial, sans-serif;
+  color: #121214;
 }
